tth-sdo/main/default/objects/Lead/fields/Address_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Address_Mapped__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; Street &amp; &quot;%20&quot; &amp; City &amp; &quot;%20&quot; &amp; State &amp; &quot;%20&quot; &amp; PostalCode,IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000001GtsT&quot;, &quot;Map Address in Google&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Address in Google Maps</label>
    <type>Text</type>
</CustomField>