tth-sdo/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Lead_Total__c &gt; 0, &#39;0156g000001Gtsc&#39;, &#39;0156g000001Gtsd&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Lead_Total__c &gt; 5, &#39;0156g000001Gtsc&#39;, &#39;0156g000001Gtsd&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Lead_Total__c &gt; 10, &#39;0156g000001Gtsc&#39;, &#39;0156g000001Gtsd&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp; 
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Lead_Total__c &gt; 15, &#39;0156g000001Gtsc&#39;, &#39;0156g000001Gtsd&#39;),&#39;&#39;,24,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>