tth-sdo/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Rating,
&quot;Hot&quot;, &quot;0156g000001Gtsr&amp;oid=&quot;&amp;$Organization.Id,
&quot;Warm&quot;, &quot;0156g000001Gtss&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cool&quot;, &quot;0156g000001Gtst&amp;oid=&quot;&amp;$Organization.Id,
&quot;0156g000001Gtst&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>