tth-sdo/main/default/objects/Lead/fields/SlickSidebar_Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>SlickSidebar_Tab_Name__c</fullName>
    <formula>FirstName &amp; &#39; &#39; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SlickSidebar Tab Name</label>
    <type>Text</type>
</CustomField>