tth-sdo/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( LeadSource, 
&quot;Website&quot;,&quot;0156g000001Gtsu&amp;oid=&quot;&amp;$Organization.Id,
&quot;Social Media&quot;, &quot;0156g000001Gtsv&amp;oid=&quot;&amp;$Organization.Id,
&quot;Marketing Event&quot;, &quot;0156g000001Gtsw&amp;oid=&quot;&amp;$Organization.Id,
&quot;Referral&quot;,&quot;0156g000001Gtsx&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cold Call&quot;,&quot;0156g000001Gtsy&amp;oid=&quot;&amp;$Organization.Id,
&quot;Data.com&quot;, &quot;0156g000001Gtsz&amp;oid=&quot;&amp;$Organization.Id,
&quot;Community&quot;, &quot;0156g000001Gtt0&amp;oid=&quot;&amp;$Organization.Id,
&quot;Inbound Call&quot;,&quot;0156g000001Gtt1&amp;oid=&quot;&amp;$Organization.Id,
&quot;Partner&quot;,&quot;0156g000001Gtt2&amp;oid=&quot;&amp;$Organization.Id,
&quot;0156g000001Gtsu&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>