tth-sdo/main/default/objects/Lead/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <businessProcess>Sales Lead</businessProcess>
    <description>Standard lead qualification and conversion process.</description>
    <label>Lead</label>
</RecordType>