tth-sdo/main/default/objects/Lead/listViews/Pardot_Leads.listView-meta.xml
<ListView>
    <fullName>Pardot_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>pi__score__c</columns>
    <columns>pi__grade__c</columns>
    <columns>pi__last_activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Pardot_Lead</value>
    </filters>
    <label>Pardot Leads</label>
    <language>en_US</language>
</ListView>